--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "stylus": "0.42.3",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "async": "~0.2.10"
   },
   "devDependencies": {},
   "author": "",
